# atomic-tracker

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Plan.md  README.md  coverage-report.txt  docker-compose.yml  pyproject.toml  requirements.txt  task.md  Требования.html
.github/workflows/: ci.yml
.obsidian/: appearance.json  workspace.json
config/: celery.py  settings.py  urls.py
docker/app/: entrypoint.sh
docker/nginx/: default.conf
habits/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0002_rename_habits_habi_user_id_1cfbea_idx_habits_habi_user_id_0c9228_idx_and_more.py
tasks/: reminder_tasks.py  tests.py
telegram_integration/: admin.py  apps.py  bot.py  models.py  services.py  tests.py  urls.py  views.py
telegram_integration/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py  0003_remove_user_telegram_chat_id.py  0004_user_telegram_chat_id.py  (+2 more)
Трекер привычек_files/: 204790606.html  Ny8i-VGR9WEz4G9O.js.Без названия  cookies  gtm.js.Без названия  iframe.player.js.Без названия  js  main.5162f079b14f9944.js.Без названия  player.js.Без названия  polyfills.bbaa634150d6f7d5.js.Без названия  runtime.de5bdf06d4bf6566.js.Без названия  saved_resource  saved_resource(1)  saved_resource(2)  saved_resource(3).html  styles.15f6a4cc5fd00e95.css  vendor.144c0d606c71ba12.js.Без названия
(+1 files in other folders)
